<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/Header">
        <Button
            android:layout_margin="5sp"
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Data"
            android:layout_gravity="right"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/TV0"
            style="@style/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weight"/>

        <EditText
            android:id="@+id/weight"
            style="@style/EDT"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/Weight"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/TV"
            android:id="@+id/TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Height" />

        <EditText
            android:id="@+id/height"
            style="@style/EDT"
            android:ems="8"
            android:hint="@string/Height"
            android:inputType="numberDecimal" />

        <!--BMI-->
        <TextView
            android:id="@+id/BMI"
            style="@style/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMI" />

        <!--Status-->
        <TextView
            android:id="@+id/TV2"
            style="@style/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />
        <TextView
            android:id="@+id/Status"
            style="@style/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:onClick="clickToCalculate"
            android:text="@string/button1" />




    </LinearLayout>


</LinearLayout>
